--- a/Tabuada/modelo.html
+++ b/Tabuada/modelo.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercícios</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            Qualé Julio...
+            <p>Número: <input type="number" name="num" id="inum">
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
         <div>
-            Qualé Murilo!
+           <select name="tabuada" id="itabuada" size="10">
+           </select>
         </div>
     </section>
     <footer>
-        <p> &copy; CursoEmVideo</p>
+        <p> &copy; Marcelli Marcos</p>
     </footer>
     <script src="script.js"></script>
 </body>
